# stuco.rs

./: .gitattributes  .gitignore  .taplo.toml  ACKNOWLEDGMENTS.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  Dioxus.toml  LICENSE.md  README.md  build.rs  tailwind.css  wrangler.jsonc
.github/workflows/: build-pdf.yaml  build.yml
assets/: tailwind.css
homeworks/: README.md
homeworks/week1/primerlab/: README.md
homeworks/week10/splitlab/: Cargo.toml
homeworks/week10/splitlab_ref/: Cargo.toml  README.md  build.rs
homeworks/week11/autograder/: Dockerfile
homeworks/week9/: README.md
lectures/: README.md
lectures/01_introduction/: introduction.md
lectures/02_ownership_p1/: ownership_p1.md  plan.md
lectures/03_structs_enums/: structs_enums.md
lectures/06_modules_testing/: modules_testing.md
lectures/07_ecosystem/: ecosystem.md
lectures/09_ownership_p2/: ownership_p2.md
lectures/10_lifetimes/: lifetimes.md
lectures/11_smart_pointers/: smart_pointers.md
lectures/12_unsafe/: unsafe.md
lectures/13_parallelism/: parallelism.md
lectures/14_concurrency/: concurrency.md
resources/: resource.schema.json
schedule/: week.schema.json  week07.toml  week08.toml  week09.toml  week10.toml  week11.toml  week12.toml  week13.toml
slidev/: .gitignore  README.md  package.json
slidev/runtime/: slide-bottom.vue  style.css  vite.config.ts
slidev/scripts/: run.mjs
src/: about.rs  home.rs  main.rs  navbar.rs  resources.rs  schedule.rs  semesters.rs  syllabus.typ
src/components/: navbar.rs
src/pages/: about.rs  home.rs  mod.rs  resources.rs  semesters.rs
(+83 files in other folders)
