[package]
name = "stuco-rs"
version = "0.1.0"
authors = ["Anish Pallati <i@anish.land>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
schemars = "1.2.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.10"

[dev-dependencies]
serde_json = "1.0.148"

[features]
default = ["web"]
web = ["dioxus/web"]

[profile.release]
debug = false
